--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,6 @@
     <title>My Webpage</title>
   </head>
   <body>
-    Hello, Planet
-    Hello, again
+    Hello, Planet Hello
   </body>
 </html>
